# pulsar-studio

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: README.md  index.html  package.json  tsconfig.json
apps/desktop/src/: App.debug.tsx  App.simple-layout.tsx  App.simple.tsx  App.test.tsx  App.test2.tsx  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.png.backup
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/components/: ErrorBoundary.tsx  Icons.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx  ThreadConfigModal.tsx
apps/desktop/src/i18n/: i18n.ts
apps/desktop/src/i18n/locales/: en.json  zh.json
apps/desktop/src/pages/: ActionsPage.tsx  GuidesPage.tsx  KnowledgePage.tsx  SettingsPage.tsx  SettingsPage.tsx.backup  WorkingPage.tsx
apps/desktop/src/stores/: useActionStore.ts  useAppStore.ts  useGuideStore.ts  useKnowledgeStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: index.ts
data/: config.json
data/guides/: software-development.json
data/knowledge/: software-development.json
src/: cli.ts  index.ts
src/action/: index.ts
src/agent/: index.ts
src/decider/: index.ts
src/guide/: index.ts
src/i18n/locales/: en.json  zh.json
src/knowledge/: index.ts
src/llm/: index.ts
src/planner/: index.ts
src/types/: index.ts
